--- a/src/index.css
+++ b/src/index.css
@@ -176,6 +176,95 @@ header{
   box-shadow: 0.8rem 0 0.8rem rgba(0, 0, 0, 0.25);
 }
 
+.work-container{
+  width: 80vw;
+  padding: 5rem;
+  box-shadow: 0 0.4rem 1.2rem rgba(0, 0, 0, 0.1);
+  margin-top: -10rem;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.work-container .main-heading{
+  font-size: 3rem;
+  font-weight: bolder;
+  margin-bottom: 4rem;
+  word-spacing: 1rem;
+}
+
+.work-container-subdiv{
+  padding: 0 6rem;
+}
+
+.work-container .sub-heading{
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.fontawesome{
+  font-size: 2.3rem;
+  color: var(--primary-color);
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  background-color: var(--bgcolor);
+  display: grid;
+  place-items: center;
+  text-align: center;
+  margin: 2rem auto;
+}
+
+
+.our-services img{
+  width: 40%;
+  height: 75%;
+  margin-top: 10rem;
+  box-shadow: 0 0.8rem 0.8rem rgba(0, 0, 0, 0.25);
+  border-radius: 1.5rem;
+}
+
+
+.our-services .mini-title{
+  text-transform: uppercase;
+  font-weight: normal;
+  margin: 3rem 0;
+  text-align: left;
+  font-size: 1.5rem;
+}
+
+.our-services .main-heading{
+  font-weight: bolder;
+}
+
+
+.our-services-info{
+  margin-top: 4rem;
+
+}
+
+.our-services .our-services-number{
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 0.1rem solid var(--primary-color);
+  font-size: 1.5rem;
+  color: var(--primary-color);
+  display: grid;
+  place-items: center;
+}
+
+.our-services-data{
+  padding-left: 2rem;
+}
+
+.our-services .our-services-data p{
+  margin: 1rem 0;
+}
+
+
+
+
 
 
 
