--- a/src/index.css
+++ b/src/index.css
@@ -410,13 +410,146 @@ footer .fontawesome:hover{
   color: #fff;
 }
 
-
 @keyframes rotatefont{
   0%{
     transform: scale(0.6);
   }
   100%{
     transform: scale(1.2);
+  }
+}
+
+.notfound{
+  height: 80vh;
+}
+
+.notfound-404 a{
+  background-color: var(--primary-color);
+  padding: 1rem 3rem;
+  border-radius: 4rem;
+}
+
+
+@media(max-width: 998px){
+  .navbar .navbar-collapse{
+    margin-top: 1rem;
+    background-color: #fff;
+    padding: 2rem 1rem;
+  }
+
+  .input-group .btn-style{
+    font-size: 1.2rem;
+  }
+
+  .main-hero-container h1{
+    font-size: 2.5rem;
+  }
+
+  .main-hero-para{
+    font-size: 1.5rem;
+    padding-right: 1rem;
+    width: 100%;
+  }
+
+  .main-hero-container .header-left-side{
+    padding-left: 4rem;
+    margin-top: 1rem;
+  }
+
+  .main-herosection-images{
+    position: relative;
+    height: 25rem;
+  }
+
+  .header-right-side img{
+    width: 60%;
+    height: 100%;
+    margin-top: 0rem;
+  }
+
+  .header-right-side .main-hero-img2{
+    position: absolute;
+    width: 40%;
+    height: 35%;
+    left: 50%;
+    top: -2%;
+    box-shadow: 0.8px 0rem 0.8rem rgb(0 0 0 / 25%);
+  }
+
+  .input-group .input-group-button{
+    right: 26%;
+    width: 30%;
+  }
+
+  .work-container{
+    margin-top: -4rem;
+  }
+
+  .work-container .main-heading{
+    font-size: 2.7rem;
+    font-weight: bolder;
+    margin-bottom: 3rem;
+    word-spacing: 0rem;
+  }
+
+  .work-container-subdiv{
+    padding: 0 0rem;
+  }
+
+  .our-service-list{
+    padding-left: 3rem;
+  }
+
+  .our-service-rightside-img{
+    text-align: center;
+  }
+
+  .our-services img{
+    width: 70%;
+    height: 85%;
+  }
+
+  .our-services .our-service-leftside-img img{
+    margin-top: 0;
+  }
+  .service-container .work-container-subdiv{
+    padding: 0 2rem;
+    margin: 2rem auto;
+  }
+
+  .service-container .main-heading{
+    margin: 5rem auto 0 auto;
+    font-weight: bolder;
+  }
+
+  .our-services-rightside-content{
+    padding-left: 5rem;
+  }
+
+  .service-main-container{
+    padding: 2rem 0;
+  }
+
+  .Services-main-row{
+    margin-top: 4rem;
+    padding-left: 3rem;
+  }
+
+  .contactus-section{
+    margin: 4rem 0;
+  }
+
+  .contact-rightside{
+    margin-top: 5rem;
+  }
+
+  .contact-rightside form .main-hero-para{
+    font-size: 1.3rem;
+    color: var(--text-color);
+    margin: 0;
+    font-weight: lighter;
+    width: 98%;
+    padding: 0px 1rem;
   }
 }
 
